feat: api search tracks and lists
